@@ -138,6 +138,8 @@ dpkg (1.17.0) UNRELEASED; urgency=low
   * Add new dpkg-shlibdeps -l option to add private shared library directories.
     This should be used instead of abusing LD_LIBRARY_PATH to pass the paths,
     which might be problematic when cross-compiling. Closes: #698881
+  * Only apply empy line and comma cleanups when doing substvar replacements
+    on fields where those are relevant. Closes: #659814
 
   [ Raphaël Hertzog ]
   * Fix dpkg-maintscript-helper rm_conffile and mv_conffile to do nothing
